fix(lhci): fix color-contrast error

--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -13,7 +13,7 @@
     margin-bottom: 2rem;
     &.dim {
       margin-bottom: 0.5rem;
-      opacity: 0.5;
+      opacity: 0.75;
     }
   }
   a {
